--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "yargs": "^16.1.0"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1"
   }
 }
