--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -15,6 +15,9 @@
   "watch": [
     "app/**/*.php",
     "config/**/*.php",
-    "resources/views/**/*.php"
+    "resources/views/**/*.php",
+    "resources/views/*/*.php",
+    "resources/views/*/*/*.php",
+    "resources/views/*/*/*/*.php"
   ]
 }
