--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -16,6 +16,10 @@
     "app/**/*.php",
     "config/**/*.php",
     "resources/views/**/*.php",
+    "resources/views/**/**/*.php",
+    "resources/views/**/**/**/*.php",
+    "resources/views/**/**/**/**/*.php",
+    "resources/views/*.php",
     "resources/views/*/*.php",
     "resources/views/*/*/*.php",
     "resources/views/*/*/*/*.php"
