--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 .cache-loader
 node_modules
+html
 npm-debug.log
 yarn-error.log
 resources/assets/config-local.json
